# APILojaInfo

./: .gitignore  README.md  Readme.md  app.py  pyproject.toml
apiLoja/: admin.py  adminManager.py  dbManager.py  loja.py  lojaManager.py  pagamentosManager.py  produtos.py  produtosManager.py  testuser.py  user.py  userManager.py  venda.py  vendaManager.py
bancoDeDados/: PF.mwb  database_pf.sql
static/CSS/: admin.css  carrinho.css  default.css  form-popup.css  forms.css  navbar.css  product_card.css  product_section.css  produtopagina.css  snackbar.css  style.css  usermanager.css
static/js/: cadastro.js  cadastroproduto.js  carrinho.js  click_product.js  entrar.js  gerenciamentousuarios.js  login.js  navbar.js  paginaproduto.js  snack.js
static/js/admin/: cadastroproduto.js  neo_gerenciamentousuarios.js  neo_gerencimentoprodutos.js
templates/: admin.html  base.html  base_limpa.html  base_nova.html  cadastrarproduto.html  cadastro.html  carrinho.html  carrinho_test.html  carrinho_test2.html  entrar.html  gerenciarusuarios.html  index.html  index_test.html  login.html  macros.html  neo_cadastro.html  neo_cadastroproduto.html  neo_gerenciarprodutos.html  neo_gerenciarusuarios.html  notfound.html  produto.html  produtopagina.html  teste.html
templates/CSS/: style.css  style_.css
templates/layout/: base_limpa.html  base_nova.html  neo_admin.html  neo_base_nova.html
